# github-notion-syncer

./: LICENSE  LICENSE.txt  README.md  github.ts  main.ts  makefile  notion.ts  pyproject.toml
.github/workflows/: sync.yaml
github_notion_syncer/: __about__.py  __main__.py
github_notion_syncer/cli/: __init__.py
tests/: __init__.py
