[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-notion-syncer"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Leynier Gutiérrez González", email = "leynier41@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/github-notion-syncer#readme"
Issues = "https://github.com/unknown/github-notion-syncer/issues"
Source = "https://github.com/unknown/github-notion-syncer"

[project.scripts]
github-notion-syncer = "github_notion_syncer.cli:github_notion_syncer"

[tool.hatch.version]
path = "github_notion_syncer/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=github_notion_syncer --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "github_notion_syncer/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
